--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -8,8 +8,8 @@
 </head>
 <body>
   <!-- Contenedor que abarca toda la pantalla con la imagen de fondo -->
-  <div class="relative h-screen bg-cover bg-center" style="background-image: url('/images/inicio1.jpg');">
-    <!-- Navbar -->
+    <div class="relative h-screen bg-cover bg-center" style="background-image: url('/images/inicio1.jpg');">
+  <!-- Navbar -->
     <nav class="fixed w-full bg-gradient-to-b from-black to-transparent p-4 z-50">
 
       <div class="max-w-6xl mx-auto flex items-center justify-between">
@@ -21,7 +21,7 @@
             <a href="#" class="text-white hover:text-red-500 transition duration-300">Inicio</a>
           </li>
           <li>
-            <a href="/pages/comprar.html" class="bg-red-700 text-white px-1 py-.5 rounded-lg shadow-md hover:bg-red-500 transition">Comprar Ahora
+            <a href="/pages/comprar.html" class="bg-red-700 text-white px-1 py-1 pb-1 pt-1 rounded-lg shadow-md hover:bg-red-500 transition">Comprar Ahora
             </a>
 
           </li>
@@ -47,8 +47,8 @@
 
   <section class="relative h-screen">
     <!-- Imagen de fondo con un blur sutil y degradado -->
-    <div class="absolute inset-0">
-      <img src="" alt="Fondo" class="w-full h-full object-cover" loading="lazy" >
+    <div class="absolute">
+      <img src="/images/inicio4.jpg" alt="Fondo" class="w-full h-full object-cover" loading="lazy" >
       <!-- Degradado que va de un negro semitransparente a transparente -->
       <div class="absolute inset-0 bg-gradient-to-t from-black/50 to-transparent"></div>
     </div>
@@ -94,7 +94,7 @@
         <!-- Columna con el texto descriptivo, alineado a la derecha -->
         <div class="w-full md:w-1/2 p-4 text-center md:text-right text-white">
         <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
-          <iframe src="https://www.youtube.com/embed/Y8HWAfmdr10" title="Video de YouTube" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe src="https://www.youtube.com/embed/Y8HWAfmdr10" title="Video de YouTube" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" loading="lazy" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         </div>
       </div>
@@ -177,7 +177,7 @@
 
 
 <footer class="bg-black text-white py-8 px-4">
-  <div class="max-w-6xl mx-auto grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-8 text-center md:text-left">
+  <div class="max-w-6xl mx-auto grid grid-cols-1 sm:grid-cols-1 md:grid-cols-2 gap-8 text-center md:text-left">
     
     <!-- Logo y descripción -->
     <div>
@@ -214,17 +214,12 @@
   </div>
 </div>
   <!-- Línea divisoria -->
-  <div class="border-t border-gray-700 mt-6"></div>
+  <div class="border- border-gray-700 mt-6"></div>
 
   <!-- Derechos reservados -->
   <div class="text-center text-gray-500 text-sm mt-4">
     &copy; 2025 Cielo y Tierra. Todos los derechos reservados.
   </div>
 </footer>
-
-
-
-
-
 </body>
 </html>
