--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -32,7 +32,7 @@
             <a href="/pages/nosotros.html" class="w-16 md:w-32 lg:w-48 text-white hover:text-white transition duration-300 hover:underline hover:underline-offset-4 hover:decoration-blue-500">Acerca de nosotros</a>
           </li>
           <li>
-            <a href="/pages/login.html" class="flex items-center text-white hover:text-white transition duration-300 hover:underline hover:underline-offset-4 hover:decoration-blue-500">
+            <a href="/pages/inisiosesion.html" class="flex items-center text-white hover:text-white transition duration-300 hover:underline hover:underline-offset-4 hover:decoration-blue-500">
               <img src="/images/icons/Register.gif" alt="Login Icon" class="w-6 h-6 mr-2" />
               Iniciar Sesión
             </a>
@@ -104,13 +104,12 @@
   <div class="relative pt-8">
     <h1 class="text-white text-4xl font-bold text-center">¿Preguntas frecuentes?</h1>
   </div>
-  /images/inicio4.jpg
   <!-- Contenido de la sección -->
   <div class="relative flex flex-col md:flex-row items-center px-4 py-8">
     <div class="w-full flex flex-col md:flex-row justify-end items-center">
       <!-- Columna con imagen del producto -->
       <div class="w-full md:w-1/2 p-4">
-        <img src="/images/inicio5.jpg" alt="El Posh" class="w-full object-cover rounded-lg transition-transform duration-500 hover:scale-105" loading="lazy">
+        <img src="/images/inicio5.jpg" alt="El Posh" class="w-100% object-cover rounded-lg transition-transform duration-500 hover:scale-105" loading="lazy">
       </div>
       <!-- Columna con texto descriptivo -->
       <div class="w-full md:w-1/2 p-4 text-center md:text-left text-white">
